Date picker visibility issue on Metric Page

--- a/forms-flow-ai/forms-flow-web/src/styles.scss
+++ b/forms-flow-ai/forms-flow-web/src/styles.scss
@@ -612,3 +612,8 @@ a.main-nav.nav-item.active-tab.dropdown-item:target {
   border-bottom-right-radius: inherit;
 	border-bottom-left-radius: inherit;
 }
+.react-daterange-picker-calendar {
+	insert: none !important;
+	top: 110% !important;
+	left: -60px !important;
+}
